--- a/Accessories.html
+++ b/Accessories.html
@@ -72,8 +72,20 @@
             </div>
             <div class="game-title1">PERIPHERALS </div>
           </div>
+    
+            <div class="game-card1">
+                <div class="game-image1">
+                    <img src="Images/Consol.jpg" alt="Game Image">
+                    <div class="game-details1">
+                        <p>At Epic Arcade, we have the best gaming peripherals to make your gaming more fun and exciting! 
+                        <br>From keyboards and mice to headsets and controllers. 
+                        <br>we’ve got everything you need. Whether you’re a casual gamer or a pro, our gear is built for comfort, precision, and style</p>
+                        <button  class="more-button"><a href="Consoles.html" class="font">MORE</a></button>
+                    </div>
+                </div>
     </section>
     <div><H1>GAMING MERCHENDAICE.</H1></div>
+    
 
     <section class="row">
 
