--- a/store.html
+++ b/store.html
@@ -24,7 +24,8 @@
                         <a href="Upcoming.html">UPCOMING GAMES</a>
                         <a href="Accessories.html">ACCESSORIES</a>
                         <a href="faq.html">FAQ</a>
-                        <a href="store.html"> <i class="fa fa-shopping-cart"></i></a>
+                        <a href="store.html">STORE </a>
+                        <a href="Payment.html"><i class="fa fa-shopping-cart"></i> </a>  
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                           <i class="fa fa-bars"></i></a>
                     </div>          
