--- a/store.html
+++ b/store.html
@@ -55,12 +55,7 @@
             }
         }
     </script>
-    <div class="shopping-cart">
-        <div class="cart-icon">
-            <span class="item-count">0</span>
-            <i class="fa fa-shopping-cart"></i>
-        </div>
-    </div>
+   
     
     <h1 id="processors" class="title">Processors</h1>
     <div class="card-container"> 
@@ -80,7 +75,7 @@
         <div class="button-container">
            
             <button class="add-cart">Add to Cart</button>
-            <button class="buy-now">Buy Now</button>
+            <button class="buy-now"><a href="checkout.html"> Buy Now</a></button>
         </div>
     </div>
     <div class="card">
