--- a/store.html
+++ b/store.html
@@ -645,6 +645,8 @@
 
 
 <script src="script.js"></script>
+<script src="checkout.js"></script>
+    <script src="cart.js"></script>
   
     
 </body>
