--- a/gamestore.html
+++ b/gamestore.html
@@ -103,19 +103,23 @@
        
       
 
-      <div class="game-card">
+       <div class="game-card">
         <div class="game-image">
             <img src="Images/reddead.jpg" alt="Game Image">
             <div class="game-details">
-                <p>Price:$25.00</p>
-                <p>Discounted Price:$18.00</p>
+                <p>Price: $25.00</p>
+                <p>Discounted Price: $18.00</p>
                 <p>Genre: Action</p>
                 <p class="rating">Rating: ★★★★☆</p>
                 <button class="buy-button">BUY NOW</button>
             </div>
         </div>
-        <div class="game-title">Red Dead Redemption II</div>
-      </div>
+        <div class="game-title">Red Dead Redemption</div>
+        <!-- Add this new always-visible button -->
+        <div class="permanent-buy-section">
+            <button class="permanent-buy-button">BUY NOW</button>
+        </div>
+    </div>
       <div class="game-card">
         <div class="game-image">
             <img src="Images/warhammer.jpg" alt="Game Image">
