changed the css

--- a/Consoles.html
+++ b/Consoles.html
@@ -17,16 +17,18 @@
                 </div>   
             </div>
             <div class="rightside">
-                <nav class="HEADER">
-                    <div class="navbar" id="navbar_id"> 
-                        <a href="index.html">HOME</a>
-                        <a href="Accessories.html">ACCESSORIES</a>
-                        <a href="Peripherals.html">PERIPHERALS</a>
-
-                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                          <i class="fa fa-bars"></i></a>
-                      </div>          
-                </nav> 
+                <div class="navbar" id="navbar_id"> 
+                    <a href="index.html">HOME</a>
+                    <a href="Accessories.html">ACCESSORIES</a>
+                    <a href="Peripherals.html">PERIPHERALS</a>
+                    <a href="Payment.html" class="cart-icon">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="cart-count">0</span>
+                    </a>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </div>
             </div> 
         </section>
     </header>
