--- a/checkout.html
+++ b/checkout.html
@@ -174,7 +174,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 Game Hardware Store. All rights reserved.</p>
+        <p>&copy; 2020 EpicArcade store. All rights reserved.</p>
     </footer>
 
     <script src="checkout.js"></script>
