changed css and js

--- a/About us.html
+++ b/About us.html
@@ -26,8 +26,9 @@
                     <a href="Upcoming.html">UPCOMING GAMES</a>
                     <a href="Accessories.html">ACCESSORIES</a>
                     <a href="faq.html">FAQ</a>
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                      <i class="fa fa-bars"></i></a>
+                    <a href="Payment.html" class="active"><i class="fa fa-shopping-cart"></i> <span class="item-count">0</span></a>  
+                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                          <i class="fa fa-bars"></i></a>
                   </div>          
             </nav> 
         </div> 
@@ -272,7 +273,7 @@
 <hr>
 <p class="font3">Copyright © since 2020 – Epic Arcade. All rights reserved.</p> 
 </footer> 
- 
+<script src="JavaScript/cart.js"></script>
  
 </body>
 </html>
