--- a/Consoles.html
+++ b/Consoles.html
@@ -21,13 +21,10 @@
                     <a href="index.html">HOME</a>
                     <a href="Accessories.html">ACCESSORIES</a>
                     <a href="Peripherals.html">PERIPHERALS</a>
-                    <a href="Payment.html" class="cart-icon">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="cart-count">0</span>
-                    </a>
+                    <a href="store.html">STORE </a>
+                    <a href="Payment.html" class="active"><i class="fa fa-shopping-cart"></i> <span class="item-count">0</span></a>  
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                    </a>
+                      <i class="fa fa-bars"></i></a>
                 </div>
             </div> 
         </section>
@@ -248,6 +245,6 @@
 <hr>
 <p class="font3">Copyright © since 2020 – Epic Arcade. All rights reserved.</p> 
   </footer> 
-    
+ <script src="JavaScript/cart.js"></script>   
 </body>
 </html>
