--- a/Payment.html
+++ b/Payment.html
@@ -93,6 +93,6 @@
         <p>&copy; 2025 Game Hardware Store. All rights reserved.</p>
     </footer>
 
-    <script src="cart.js"></script>
+    <script src="JavaScript/cart.js"></script>
 </body>
 </html>
