--- a/Peripherals.html
+++ b/Peripherals.html
@@ -23,10 +23,11 @@
                         <a href="index.html">HOME</a>
                         <a href="Accessories.html">ACCESSORIES</a>
                         <a href="Consoles.html">CONSOLES</a>
-
+                        <a href="store.html">STORE </a>
+                        <a href="Payment.html" class="active"><i class="fa fa-shopping-cart"></i> <span class="item-count">0</span></a>  
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                           <i class="fa fa-bars"></i></a>
-                      </div>          
+                    </div>        
                 </nav> 
             </div> 
         </section>
@@ -434,7 +435,7 @@
 <p class="font3">Copyright © since 2020 – Epic Arcade. All rights reserved.</p> 
   </footer> 
    
-   
+  <script src="JavaScript/cart.js"></script> 
     
 </body>
 </html>
