--- a/checkout.html
+++ b/checkout.html
@@ -177,7 +177,7 @@
         <p>&copy; 2020 EpicArcade store. All rights reserved.</p>
     </footer>
 
-    <script src="checkout.js"></script>
-    <script src="cart.js"></script>
+    <script src="JavaScript/checkout.js"></script>
+    <script src="JavaScript/cart.js"></script>
 </body>
 </html>
