--- a/faq.html
+++ b/faq.html
@@ -25,6 +25,7 @@
                         <a href="Upcoming.html">UPCOMING GAMES</a>
                         <a href="Accessories.html">ACCESSORIES</a>
                         <a href="faq.html">FAQ</a>
+                        <a href="Payment.html" class="active"><i class="fa fa-shopping-cart"></i> <span class="item-count">0</span></a>  
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                           <i class="fa fa-bars"></i></a>
                       </div>          
@@ -194,6 +195,6 @@
     <p class="font3">Copyright © since 2020 – Epic Arcade. All rights reserved.</p> 
       </footer>   
        
-       
+      <script src="JavaScript/cart.js"></script> 
 </body>
 </html>
