--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a href="Accessories.html">ACCESSORIES</a>
                         <a href="faq.html">FAQ</a>
                         <a href="store.html">STORE </a>
-                        <a href="Payment.html"><i class="fa fa-shopping-cart"></i> </a>  
+                        <a href="Payment.html" class="active"><i class="fa fa-shopping-cart"></i> <span class="item-count">0</span></a>  
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                           <i class="fa fa-bars"></i></a>
                       </div>          
@@ -180,9 +180,9 @@
                 <h4>SHOP</h4>
                 <ul>
                     <li><a href="Contact us.html">CONTACT US</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="#">EVENTS</a></li>
-                    <li><a href="#">SHOP</a></li>
+                    <li><a href="store.html">SHOP</a></li>
                 </ul>
             </div>
             <div class="footer-col">
@@ -241,6 +241,7 @@
 <hr>
 <p class="font3">Copyright © since 2020 – Epic Arcade. All rights reserved.</p> 
   </footer>  
+  <script src="JavaScript/cart.js"></script>
    
 </body>
 </html>
