--- a/store.html
+++ b/store.html
@@ -25,7 +25,7 @@
                         <a href="Accessories.html">ACCESSORIES</a>
                         <a href="faq.html">FAQ</a>
                         <a href="store.html">STORE </a>
-                        <a href="Payment.html"><i class="fa fa-shopping-cart"></i> </a>  
+                        <a href="Payment.html" class="active"><i class="fa fa-shopping-cart"></i> <span class="item-count">0</span></a>  
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                           <i class="fa fa-bars"></i></a>
                     </div>          
@@ -644,9 +644,9 @@
 </div>
 
 
-<script src="script.js"></script>
-<script src="checkout.js"></script>
-    <script src="cart.js"></script>
+
+<script src="JavaScript/cart.js"></script>
+    <script src="JavaScript/checkout.js"></script>
   
     
 </body>
