changed html and css

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <br> Explore in-depth game analyses, tips, and guides to level up your skills, along with breaking news on the newest releases and updates.
                         <br> Join our vibrant community, where you can discuss strategies, share your experiences, and discover your next favorite game.
                         <br> Get ready to dive into the action, challenge yourself, and experience gaming like never before. Welcome to your new gaming home!</p>
-                    <a href="#" class="hero-btn">EXPLORE</a>
+                    <a href="gamestore.html" class="hero-btn">EXPLORE</a>
                 </div>
             </div>
         </div>
