udpate html  and css

--- a/faq.html
+++ b/faq.html
@@ -25,6 +25,7 @@
                         <a href="Upcoming.html">UPCOMING GAMES</a>
                         <a href="Accessories.html">ACCESSORIES</a>
                         <a href="faq.html">FAQ</a>
+                        <a href="store.html">STORE</a>
                         <a href="Payment.html" class="active"><i class="fa fa-shopping-cart"></i> <span class="item-count">0</span></a>  
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                           <i class="fa fa-bars"></i></a>
@@ -123,19 +124,19 @@
                 <div class="footer-col">
                     <h4>OUR COMPANY</h4>
                     <ul>
-                        <li><a href="#">ACCESSORIES</a></li>
-                        <li><a href="#">GAMES</a></li>
-                        <li><a href="#">UPCOMING GAMES</a></li>
-                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="Accessories.html">ACCESSORIES</a></li>
+                        <li><a href="gamestore.html">GAMES</a></li>
+                        <li><a href="Upcoming.html">UPCOMING GAMES</a></li>
+                        <li><a href="About us.html">ABOUT US</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>SHOP</h4>
                     <ul>
                         <li><a href="Contact us.html">CONTACT US</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a href="#">EVENTS</a></li>
-                        <li><a href="#">SHOP</a></li>
+                        <li><a href="store.html">SHOP</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
