--- a/gamestore.html
+++ b/gamestore.html
@@ -27,6 +27,7 @@
                         <a href="Upcoming.html">UPCOMING GAMES</a>
                         <a href="Accessories.html">ACCESSORIES</a>
                         <a href="faq.html">FAQ</a>
+                        <a href="store.html">STORE</a>
                         <a href="Payment.html" class="active"><i class="fa fa-shopping-cart"></i> <span class="item-count">0</span></a>  
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                           <i class="fa fa-bars"></i></a>
@@ -359,9 +360,9 @@
                     <h4>SHOP</h4>
                     <ul>
                         <li><a href="Contact us.html">CONTACT US</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a href="#">EVENTS</a></li>
-                        <li><a href="#">SHOP</a></li>
+                        <li><a href="store.html">SHOP</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
