update accessories html

--- a/Accessories.html
+++ b/Accessories.html
@@ -78,9 +78,7 @@
                 <div class="game-image1">
                     <img src="Images/AMD.jpg" alt="Game Image">
                     <div class="game-details1">
-                        <p>At Epic Arcade, we have the best gaming peripherals to make your gaming more fun and exciting! 
-                        <br>From keyboards and mice to headsets and controllers. 
-                        <br>we’ve got everything you need. Whether you’re a casual gamer or a pro, our gear is built for comfort, precision, and style</p>
+                        <p>Level up your setup with our ultimate collection of gaming gear, exclusive merch, and digital goodies. Whether you're a casual player or a hardcore warrior, we've got everything you need to power up your game. Explore epic loot, discover rare finds, and join the legend—only at Epic Arcade!</p>
                         <button  class="more-button"><a href="store.html" class="font">MORE</a></button>
                     </div>
                 </div>
