update the html

--- a/Accessories.html
+++ b/Accessories.html
@@ -78,7 +78,7 @@
                 <div class="game-image1">
                     <img src="Images/AMD.jpg" alt="Game Image">
                     <div class="game-details1">
-                        <p>Level up your setup with our ultimate collection of gaming gear, exclusive merch, and digital goodies. Whether you're a casual player or a hardcore warrior, we've got everything you need to power up your game. Explore epic loot, discover rare finds, and join the legend—only at Epic Arcade!</p>
+                        <p>Level up your game with our ultimate collection of gaming gear and digital goodies. From next-gen consoles and custom controllers to epic posters and gamer apparel, we’ve got the loot every player dreams of. Whether you're grinding levels, this is your one-stop shop for all things gaming. New drops added regularly—because the grind never stops!</p>
                         <button  class="more-button"><a href="store.html" class="font">MORE</a></button>
                     </div>
                 </div>
