update the store html

--- a/store.html
+++ b/store.html
@@ -63,9 +63,9 @@
         <div class="image-container">
             <img src="Images/processor1.jpg" alt="Product Image" class="product-image">
             <div class="price-info">
-                <span class="price">$100.00</span>
+                <span class="price">$600.00</span>
                 <span class="discount">20% OFF</span>
-                <span class="discounted-price">$80.00</span>
+                <span class="discounted-price">$480.00</span>
                 <div class="ratings">
                     ★★★★☆
                 </div>
@@ -82,9 +82,9 @@
         <div class="image-container">
             <img src="Images/processor2.jpg" alt="Product Image" class="product-image">
             <div class="price-info">
-                <span class="price">$100.00</span>
+                <span class="price">$700.00</span>
                 <span class="discount">20% OFF</span>
-                <span class="discounted-price">$80.00</span>
+                <span class="discounted-price">$560.00</span>
                 <div class="ratings">
                     ★★★★☆
                 </div>
@@ -101,9 +101,9 @@
         <div class="image-container">
             <img src="Images/processor3.jpg" alt="Product Image" class="product-image">
             <div class="price-info">
-                <span class="price">$100.00</span>
+                <span class="price">$450.00</span>
                 <span class="discount">20% OFF</span>
-                <span class="discounted-price">$80.00</span>
+                <span class="discounted-price">$360.00</span>
                 <div class="ratings">
                     ★★★★☆
                 </div>
@@ -120,9 +120,9 @@
         <div class="image-container">
             <img src="Images/processor4.jpg" alt="Product Image" class="product-image">
             <div class="price-info">
-                <span class="price">$100.00</span>
+                <span class="price">$440.00</span>
                 <span class="discount">20% OFF</span>
-                <span class="discounted-price">$80.00</span>
+                <span class="discounted-price">$352.00</span>
                 <div class="ratings">
                     ★★★★☆
                 </div>
@@ -139,9 +139,9 @@
         <div class="image-container">
             <img src="Images/processor5.jpg" alt="Product Image" class="product-image">
             <div class="price-info">
-                <span class="price">$100.00</span>
+                <span class="price">$10,000.00</span>
                 <span class="discount">20% OFF</span>
-                <span class="discounted-price">$80.00</span>
+                <span class="discounted-price">$8000.00</span>
                 <div class="ratings">
                     ★★★★☆
                 </div>
@@ -158,9 +158,9 @@
         <div class="image-container">
             <img src="Images/processor6.jpg" alt="Product Image" class="product-image">
             <div class="price-info">
-                <span class="price">$100.00</span>
+                <span class="price">$6000.00</span>
                 <span class="discount">20% OFF</span>
-                <span class="discounted-price">$80.00</span>
+                <span class="discounted-price">$4800.00</span>
                 <div class="ratings">
                     ★★★★☆
                 </div>
@@ -180,9 +180,9 @@
     <div class="image-container">
         <img src="Images/GC1.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$1,600.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$1280.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -199,9 +199,9 @@
     <div class="image-container">
         <img src="Images/GC2.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$1000.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$800.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -218,9 +218,9 @@
     <div class="image-container">
         <img src="Images/GC3.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$1100.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$880.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -237,9 +237,9 @@
     <div class="image-container">
         <img src="Images/GC4.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$850.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$780.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -256,15 +256,15 @@
     <div class="image-container">
         <img src="Images/GC5.jfif" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$7000.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$5600.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
         </div>
     </div>
-    <h3 id="txt1">NVIDIA RTX A6000 / L40S</h3>
+    <h3 id="txt1">NVIDIA RTX L40S</h3>
     <div class="button-container">
        
         <button class="add-cart">Add to Cart</button>
@@ -275,9 +275,9 @@
     <div class="image-container">
         <img src="Images/GC6.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$600.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$480.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -297,9 +297,9 @@
     <div class="image-container">
         <img src="Images/MB1.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$525.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$420.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -316,9 +316,9 @@
     <div class="image-container">
         <img src="Images/MB2.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$606.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$484.80</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -335,9 +335,9 @@
     <div class="image-container">
         <img src="Images/MB3.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$250.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$200.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -354,9 +354,9 @@
     <div class="image-container">
         <img src="Images/MB4.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$180.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$144.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -373,9 +373,9 @@
     <div class="image-container">
         <img src="Images/MB5.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$170.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$136.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -392,9 +392,9 @@
     <div class="image-container">
         <img src="Images/MB6.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$180.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$144.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -414,9 +414,9 @@
     <div class="image-container">
         <img src="Images/RAM1.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$300.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$240.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -433,9 +433,9 @@
     <div class="image-container">
         <img src="Images/RAM2.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$180.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$144.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -452,9 +452,9 @@
     <div class="image-container">
         <img src="Images/RAM3.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$50.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$40.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -490,9 +490,9 @@
     <div class="image-container">
         <img src="Images/RAM5.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$90.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$72.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -509,9 +509,9 @@
     <div class="image-container">
         <img src="Images/RAM6.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$400.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$320.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -531,9 +531,9 @@
     <div class="image-container">
         <img src="Images/SD1.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$130.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$104.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -550,9 +550,9 @@
     <div class="image-container">
         <img src="Images/SD2.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$180.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$144.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -569,9 +569,9 @@
     <div class="image-container">
         <img src="Images/SD3.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$115.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$92.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -588,9 +588,9 @@
     <div class="image-container">
         <img src="Images/SD4.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$70.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$56.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -607,9 +607,9 @@
     <div class="image-container">
         <img src="Images/SD5.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$80.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$64.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
@@ -626,9 +626,9 @@
     <div class="image-container">
         <img src="Images/SD6.jpg" alt="Product Image" class="product-image">
         <div class="price-info">
-            <span class="price">$100.00</span>
+            <span class="price">$90.00</span>
             <span class="discount">20% OFF</span>
-            <span class="discounted-price">$80.00</span>
+            <span class="discounted-price">$72.00</span>
             <div class="ratings">
                 ★★★★☆
             </div>
