--- a/Payment.html
+++ b/Payment.html
@@ -90,7 +90,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 Game Hardware Store. All rights reserved.</p>
+        <p>&copy; 2020 EpicArcade Store. All rights reserved.</p>
     </footer>
 
     <script src="JavaScript/cart.js"></script>
