changed checkout css and html

--- a/checkout.html
+++ b/checkout.html
@@ -121,6 +121,9 @@
                                     <option value="CA">Canada</option>
                                     <option value="UK">United Kingdom</option>
                                     <option value="AU">Australia</option>
+                                    <option value="AU">Sri Lanka</option>
+                                    <option value="AU">India</option>
+                                    <option value="AU">Maldives</option>
                                     <!-- Add more countries as needed -->
                                 </select>
                             </div>
