--- a/Aboutus.html
+++ b/Aboutus.html
@@ -91,7 +91,7 @@
 <div class="main-container">
   <div class="image-container">
      <div class="image-slide">
-          <img src="Images/buildingangle1.jpg" alt="Image 1">
+          <img src="Images/buildingangle1.webp"alt="Image 1">
           <img src="Images/building.jpg" alt="Image 2">
           <img src="Images/building2.jpg" alt="Image 3">
       </div>
